2007-05-25  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: final performance tweaks

2007-05-24  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: nice stable performance test runs

2007-05-22  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: better state trace logging and performance tweaks

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/strsctp-core.preinst.in: corrected array subscript syntax error
	* debian/strsctp-core.prerm.in: corrected array subscript syntax error
	* strsctp.spec.in: corrected array subscript syntax error

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: document db_ref bug
	* src/drivers/sctp2.c: compiler warnings
	* src/test/test-sctp_n.c: send more messages in tests

	* acinclude.m4: check for nf_reset
	* src/test/test-sctp_n.c: use PPI 0, adjust timings
	* src/test/test-sctp_t.c: adjust a few timings
	* tests/testsuite-sctp_n.at: test 7.2 passes now
	* src/drivers/sctp2.c:
	  - extensive rework of STREAMS bottom half queueing
	  - extensive rework of STREAMS locking
	  - extensive rework of timers
	  - extensive rework of logging (now uses strlog)

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strsctp.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-sctp.at: testsuite factoring
	* tests/testsuite-sctp_n.at: testsuite factoring
	* tests/testsuite-sctp_n2.at: testsuite factoring