@@ -63,23 +63,24 @@
 
 PREFIX = netperf
 
-#PLOTS = \
-#	$(PREFIX)_centos_comp.plot \
-#	$(PREFIX)_centos_delay.plot \
-#	$(PREFIX)_centos_perf.plot \
-#	$(PREFIX)_centos_thrput.plot \
-#	$(PREFIX)_fc6_comp.plot \
-#	$(PREFIX)_fc6_delay.plot \
-#	$(PREFIX)_fc6_perf.plot \
-#	$(PREFIX)_fc6_thrput.plot \
+PLOTS = \
+	$(PREFIX)_centos_comp.plot \
+	$(PREFIX)_centos_delay.plot \
+	$(PREFIX)_centos_perf.plot \
+	$(PREFIX)_centos_thrput.plot \
+	$(PREFIX)_rh7_comp.plot \
+	$(PREFIX)_rh7_delay.plot \
+	$(PREFIX)_rh7_perf.plot \
+	$(PREFIX)_rh7_thrput.plot \
+	$(PREFIX)_fc6_comp.plot \
+	$(PREFIX)_fc6_delay.plot \
+	$(PREFIX)_fc6_perf.plot \
+	$(PREFIX)_fc6_thrput.plot
+
 #	$(PREFIX)_nb_comp.plot \
 #	$(PREFIX)_nb_delay.plot \
 #	$(PREFIX)_nb_perf.plot \
 #	$(PREFIX)_nb_thrput.plot \
-#	$(PREFIX)_rh7_comp.plot \
-#	$(PREFIX)_rh7_delay.plot \
-#	$(PREFIX)_rh7_perf.plot \
-#	$(PREFIX)_rh7_thrput.plot \
 #	$(PREFIX)_smp_comp.plot \
 #	$(PREFIX)_smp_delay.plot \
 #	$(PREFIX)_smp_perf.plot \
@@ -165,10 +166,10 @@ png: $(PNGFIGS) $(PLOTS:.plot=.png)
 eps: $(EPSFIGS) $(PLOTS:.plot=.eps)
 pdf: $(PDFFIGS) $(PLOTS:.plot=.pdf)
 
-#$(PREFIX)_centos_comp.fig $(PREFIX)_centos_delay.fig $(PREFIX)_centos_perf.fig $(PREFIX)_centos_thrput.fig: $(PREFIX)_centos.dat
-#$(PREFIX)_fc6_comp.fig $(PREFIX)_fc6_delay.fig $(PREFIX)_fc6_perf.fig $(PREFIX)_fc6_thrput.fig: $(PREFIX)_fc6.dat
+$(PREFIX)_centos_comp.fig $(PREFIX)_centos_delay.fig $(PREFIX)_centos_perf.fig $(PREFIX)_centos_thrput.fig: $(PREFIX)_centos.dat
+$(PREFIX)_fc6_comp.fig $(PREFIX)_fc6_delay.fig $(PREFIX)_fc6_perf.fig $(PREFIX)_fc6_thrput.fig: $(PREFIX)_fc6.dat
 #$(PREFIX)_nb_comp.fig $(PREFIX)_nb_delay.fig $(PREFIX)_nb_perf.fig $(PREFIX)_nb_thrput.fig: $(PREFIX)_nb.dat
-#$(PREFIX)_rh7_comp.fig $(PREFIX)_rh7_delay.fig $(PREFIX)_rh7_perf.fig $(PREFIX)_rh7_thrput.fig: $(PREFIX)_rh7.dat
+$(PREFIX)_rh7_comp.fig $(PREFIX)_rh7_delay.fig $(PREFIX)_rh7_perf.fig $(PREFIX)_rh7_thrput.fig: $(PREFIX)_rh7.dat
 #$(PREFIX)_smp_comp.fig $(PREFIX)_smp_delay.fig $(PREFIX)_smp_perf.fig $(PREFIX)_smp_thrput.fig: $(PREFIX)_smp.dat
 #$(PREFIX)_cos5_comp.fig $(PREFIX)_cos5_delay.fig $(PREFIX)_cos5_perf.fig $(PREFIX)_cos5_thrput.fig: $(PREFIX)_cos5.dat
 #$(PREFIX)_suse_comp.fig $(PREFIX)_suse_delay.fig $(PREFIX)_suse_perf.fig $(PREFIX)_suse_thrput.fig: $(PREFIX)_suse.dat
