@@ -892,6 +892,30 @@ Ubuntu 6.10 & 2.6.17-11-generic\\
 Ubuntu 7.04 & 2.6.20-15-server\\
 \end{tabular}
 
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_centos_perf}
+\caption[CentOS on Porky Performance]{CentOS on Porky Performance}
+\label{figure:centosperf}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_centos_delay}
+\caption[CentOS on Porky Delay]{CentOS on Porky Delay}
+\label{figure:centosdly}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_centos_thrput}
+\caption[CentOS on Porky Throughput]{CentOS on Porky Throughput}
+\label{figure:centosthrput}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_centos_comp}
+\caption[CentOS on Porky Comparison]{CentOS on Porky Comparison}
+\label{figure:centoscomp}
+\end{figure}
+
 \subsection[Pumbah]{Pumbah}
 Pumbah is a 2.57GHz Pentium IV (i686) uniprocessor machine with 1Gb of memory.
 This machine differs from Porky in memory type only (Pumbah has somewhat
@@ -906,6 +930,30 @@ RedHat 7.2 & 2.4.20-28.7\\
 
 Pumbah is a control machine and is used to rule out differences between recent
 2.6 kernels and one of the oldest and most stable 2.4 kernels.
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_rh7_perf}
+\caption[RedHat 7.2 on Pumbah Performance]{RedHat 7.2 on Pumbah Performance}
+\label{figure:rh7perf}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_rh7_delay}
+\caption[RedHat 7.2 on Pumbah Delay]{RedHat 7.2 on Pumbah Delay}
+\label{figure:rh7dly}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_rh7_thrput}
+\caption[RedHat 7.2 on Pumbah Throughput]{RedHat 7.2 on Pumbah Throughput}
+\label{figure:rh7thrput}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_rh7_comp}
+\caption[RedHat 7.2 on Pumbah Comparison]{RedHat 7.2 on Pumbah Comparison}
+\label{figure:rh7comp}
+\end{figure}
 
 \subsection[Daisy]{Daisy}
 Daisy is a 3.0GHz i630 (x86\_64) hyper-threaded machine with 1Gb of memory.
@@ -923,6 +971,30 @@ performed on uniprocessor non-hyper-threaded machines.  This machine is
 hyper-threaded and runs full SMP kernels.  This machine also supports EMT64 and
 runs \texttt{x86\_64} kernels.  It is used to rule out both SMP differences as
 well as 64-bit architecture differences.
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_fc6_perf}
+\caption[Fedora Core 6 on Daisy Performance]{Fedora Core 6 on Daisy Performance}
+\label{figure:fc6perf}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_fc6_delay}
+\caption[Fedora Core 6 on Daisy Delay]{Fedora Core 6 on Daisy Delay}
+\label{figure:fc6dly}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_fc6_thrput}
+\caption[Fedora Core 6 on Daisy Throughput]{Fedora Core 6 on Daisy Throughput}
+\label{figure:fc6thrput}
+\end{figure}
+
+\begin{figure}[p]
+\center\includegraphics[width=\columnwidth]{netperf_fc6_comp}
+\caption[Fedora Core 6 on Daisy Comparison]{Fedora Core 6 on Daisy Comparison}
+\label{figure:fc6comp}
+\end{figure}
 
 \subsection[Mspiggy]{Mspiggy}
 Mspiggy is a 1.7Ghz Pentium IV (M-processor) uniprocessor notebook (Toshiba
