@@ -1,6 +1,8 @@
 2007-05-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/sctp2.c: final performance tweaks
+	* doc/papers/Makefile: paper updates
+	* doc/papers/sctpresults.tex: paper updates
 
 2007-05-24  Brian Bidulock  <bidulock@openss7.org>
 
